--- a/ViperPrototype/Base.lproj/Main.storyboard
+++ b/ViperPrototype/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
-        <!--Main Movies List View Controller-->
+        <!--Main Movies List View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainMoviesListViewController" customModule="ViperPrototype" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainMoviesListView" id="BYZ-38-t0r" customClass="MainMoviesListView" customModule="ViperPrototype" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,12 +16,80 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwB-eZ-Akn">
+                                <rect key="frame" x="277" y="328" width="46" height="36"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="Detail">
+                                    <color key="titleColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# available titles: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1aF-eI-C6k">
+                                <rect key="frame" x="229.5" y="288" width="141" height="24"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Movies List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtg-tC-HYV">
+                                <rect key="frame" x="196" y="220.5" width="208" height="35.5"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="30"/>
+                                <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gwB-eZ-Akn" firstAttribute="top" secondItem="1aF-eI-C6k" secondAttribute="bottom" constant="16" id="IdD-8d-kqq"/>
+                            <constraint firstItem="1aF-eI-C6k" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RI6-nQ-TCb"/>
+                            <constraint firstItem="1aF-eI-C6k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gsX-8b-HzH"/>
+                            <constraint firstItem="1aF-eI-C6k" firstAttribute="top" secondItem="dtg-tC-HYV" secondAttribute="bottom" constant="32" id="hGL-4f-9oW"/>
+                            <constraint firstItem="gwB-eZ-Akn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="veO-ZH-tXY"/>
+                            <constraint firstItem="dtg-tC-HYV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="x5T-iY-Pp6"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="detailButton" destination="gwB-eZ-Akn" id="4W7-w2-Pcq"/>
+                        <outlet property="totalMoviesLabel" destination="1aF-eI-C6k" id="1BE-3f-r0e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Movie Detail View-->
+        <scene sceneID="ctA-lZ-cZD">
+            <objects>
+                <viewController storyboardIdentifier="MovieDetailView" id="e7b-k5-jQJ" customClass="MovieDetailView" customModule="ViperPrototype" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TYp-oT-JH8"/>
+                        <viewControllerLayoutGuide type="bottom" id="Lzf-Wy-KrV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J7o-4U-8cG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Movies Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NdI-pb-lyS">
+                                <rect key="frame" x="183" y="282.5" width="234" height="35.5"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="30"/>
+                                <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NdI-pb-lyS" firstAttribute="centerY" secondItem="J7o-4U-8cG" secondAttribute="centerY" id="8lb-sW-Tte"/>
+                            <constraint firstItem="NdI-pb-lyS" firstAttribute="centerX" secondItem="J7o-4U-8cG" secondAttribute="centerX" id="I01-bC-pk8"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U9S-Og-Jh3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1152" y="388"/>
         </scene>
     </scenes>
 </document>
