Adding release date to UI

--- a/ViperPrototype/Base.lproj/Main.storyboard
+++ b/ViperPrototype/Base.lproj/Main.storyboard
@@ -56,17 +56,29 @@
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="30"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ESJ-sb-JYb">
+                                                    <rect key="frame" x="16" y="101.5" width="528" height="20.5"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <animations/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <animations/>
                                         <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="ESJ-sb-JYb" secondAttribute="bottom" constant="8" id="Da4-uV-35W"/>
                                             <constraint firstItem="oOW-sN-76f" firstAttribute="leading" secondItem="OjG-tf-cAZ" secondAttribute="leadingMargin" constant="8" id="Y9m-gq-vJB"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="oOW-sN-76f" secondAttribute="trailing" constant="8" id="hbL-g8-Y09"/>
+                                            <constraint firstItem="ESJ-sb-JYb" firstAttribute="top" relation="greaterThanOrEqual" secondItem="oOW-sN-76f" secondAttribute="bottom" constant="8" id="jap-6z-znq"/>
                                             <constraint firstItem="oOW-sN-76f" firstAttribute="centerY" secondItem="OjG-tf-cAZ" secondAttribute="centerY" id="tuO-sl-6Hk"/>
+                                            <constraint firstItem="ESJ-sb-JYb" firstAttribute="trailing" secondItem="oOW-sN-76f" secondAttribute="trailing" id="uyG-YW-WCy"/>
+                                            <constraint firstItem="ESJ-sb-JYb" firstAttribute="leading" secondItem="oOW-sN-76f" secondAttribute="leading" id="z2U-oH-18r"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="releaseDateLabel" destination="ESJ-sb-JYb" id="cjp-OO-Uyb"/>
                                             <outlet property="titleLabel" destination="oOW-sN-76f" id="j6R-e7-Tat"/>
                                         </connections>
                                     </collectionViewCell>
