--- a/VIPER.playground/Resources/ProfileView.xib
+++ b/VIPER.playground/Resources/ProfileView.xib
@@ -10,32 +10,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController">
             <connections>
-                <outlet property="emailLabel" destination="Ccc-Pm-Axe" id="Fcz-Ok-UOh"/>
-                <outlet property="imageView" destination="Eef-Rq-VXS" id="Qrw-eX-If6"/>
-                <outlet property="nameLabel" destination="tnQ-Bw-DmB" id="fqX-dV-m8Q"/>
+                <outlet property="emailLabel" destination="n7j-Jj-pv1" id="5vI-sL-31m"/>
+                <outlet property="imageView" destination="Z95-p6-XE3" id="h1l-XG-9bo"/>
+                <outlet property="nameLabel" destination="y83-w5-rG8" id="p5m-9b-gt1"/>
+                <outlet property="view" destination="iN0-l3-epB" id="u2l-aU-N10"/>
             </connections>
         </placeholder>
-        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="3zn-2h-90X">
-            <rect key="frame" x="0.0" y="0.0" width="110" height="200"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eef-Rq-VXS">
-                    <rect key="frame" x="0.0" y="0.0" width="110" height="158"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tnQ-Bw-DmB">
-                    <rect key="frame" x="0.0" y="158" width="110" height="21.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccc-Pm-Axe">
-                    <rect key="frame" x="0.0" y="179.5" width="110" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-        </stackView>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Fp5-Et-KMc">
+                    <rect key="frame" x="0.0" y="100" width="375" height="467"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z95-p6-XE3">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="426"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y83-w5-rG8">
+                            <rect key="frame" x="0.0" y="426" width="375" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7j-Jj-pv1">
+                            <rect key="frame" x="0.0" y="446.5" width="375" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="Fp5-Et-KMc" secondAttribute="bottom" constant="100" id="2V0-1l-WIx"/>
+                <constraint firstItem="Fp5-Et-KMc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XDg-8g-MKf"/>
+                <constraint firstAttribute="trailing" secondItem="Fp5-Et-KMc" secondAttribute="trailing" id="dVg-rJ-gO1"/>
+                <constraint firstItem="Fp5-Et-KMc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="100" id="lip-5x-WOg"/>
+            </constraints>
+        </view>
     </objects>
 </document>
